# my-ngl

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  vitest.config.mjs
app/: globals.css  layout.js  page.jsx
app/api/auth/login/: route.js
app/api/auth/signup/: route.js
app/api/auth/verify/: route.js
app/api/ngl/[nglId]/: route.js
app/api/ngl/[nglId]/respond/: route.js
app/api/ngl/[nglId]/responses/: route.js
app/api/ngl/create/: route.js
app/api/user/[userId]/ngls/: route.js
app/create/: page.jsx
app/dashboard/: page.jsx
app/login/: page.jsx
app/ngl/[nglId]/: page.jsx
app/signup/: page.jsx
backend/: main.py  pyproject.toml  requirements.txt
components/: AuthProvider.jsx  Navbar.jsx  RequireAuth.jsx  RootClientLayout.jsx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: Navbar.jsx
frontend/src/pages/: CreateNGL.jsx  Dashboard.jsx  Landing.jsx  Login.jsx  RespondNGL.jsx  Signup.jsx
lib/: api-client.js  auth.js  cache.js  supabase.js  token-store.js  validation.js
tests/: auth.routes.test.js  concurrency.test.js  ngl.routes.test.js  setup.js
